kubernetes/206-Kubernetes-Microservice-Phonebook_v2/k8s_files/mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 500Mi
        livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10
        readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: pvc-volume
          mountPath: /var/lib/mysql
      volumes:
        - name: pvc-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      restartPolicy: Always
