kubernetes/206-Kubernetes-Microservice-Phonebook_v2/k8s_files/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306 
    targetPort: 3306
