kubernetes/206-Kubernetes-Microservice-Phonebook_v2/k8s_files/web_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
